gitops/espresso/apps/hindsight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hindsight
  labels:
    pod-security.kubernetes.io/enforce: baseline
