gitops/espresso/apps/hindsight/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hindsight
  namespace: hindsight
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - hindsight.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: hindsight
          port: 9999
